--- a/designesapp/templates/index.html
+++ b/designesapp/templates/index.html
@@ -12,6 +12,8 @@
 
 <body>
     <div class="container-fluid">
+      <!-- =================================================Nav bar start=================================================================== -->
+
       <div class="row navv">
         <div class="col-md-12">
           <nav class="navbar navbar-expand-lg">
@@ -51,6 +53,50 @@
       
         </div>
       </div>
+
+      <!-- ======================================================Nav bar end================================================================ -->
+
+      <!-- =======================================================About Start================================================================== -->
+
+     <div class="row about mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5"></div>
+          <div class="col-md-2 text-center">
+            <h1>
+              ABOUT US
+            </h1>
+          </div>
+          <div class="col-md-5"></div>
+        </div>
+        <div class="row about1 m-4">
+          <div class="col-md-12 p-4">
+            <p>
+              Welcome to <strong>Design Exhibition Space </strong> – your one-stop destination for beautifully crafted 
+              <strong>portfolio</strong>, <strong>resume</strong>, and <strong>digital card templates</strong>. Whether you're a creative professional, a job seeker, or someone looking to make a lasting impression, 
+              our collection of modern, customizable designs has you covered.
+            </p>
+        
+            <p>
+              Our platform is built using the latest technologies including 
+              <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and <strong>Python</strong>, ensuring a seamless, fast, and user-friendly experience.
+            </p>
+        
+            <p>
+              At Design Exhibition Space, we believe that great design should be accessible to everyone. Our mission is to 
+              empower users to present their skills and stories in the most impactful way possible, without needing 
+              advanced technical knowledge.
+            </p>
+        
+            <p>
+              We provides differents types of templatesof portfolio and resumes. Whether you want to build a sleek portfolio, a standout resume, or an eye-catching digital card – we've got you covered.
+            </p>
+          </div>
+        </div>
+      </div>
+     </div>
+
+      <!-- =========================================================About end================================================================== -->
     </div>
     <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"crossorigin="anonymous"></script>
