--- a/designesapp/templates/port.folio1.html
+++ b/designesapp/templates/port.folio1.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/bootstrap.bundle.js"></script>
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    
+    <title>Portfolio 1</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -329,5 +330,6 @@
         </div> 
         <!-- CONTACT END -->
     </div>
+    <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
 </body>
 </html>
