--- a/designesapp/templates/portfolio1.html
+++ b/designesapp/templates/portfolio1.html
@@ -16,7 +16,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg  bgo fixed-top" >
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#"><img src="{% static 'images/hey.png' %}" alt="" class="mx-3 w-100" height="50"></a>
+                  <a class="navbar-brand" href="#"><img src="{% static 'images/port1/hey.png' %}" alt="" class="mx-3 w-100" height="50"></a>
                   <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -80,11 +80,14 @@
                 <div class="row mx-4">
                     <div class="col-sm-8">
                         <h3 class="fw-bold tx fs-1 py-3">Hello! <br>I'm Tom.</h3>
-                        <p class="text-left  fs-5 text-left py-3">A full-stack web developer. Currently, pursuing bachlor's degree in Computer Science & Engineering. I have excellent knowledge of HTML CSS, JavaScript, Python and Database, I also have good command in frameworks like Bootstrap and Django. I'm always excited for opportunity to learn the new and cutting edge technologies in web development field. I'm a self-improving , confident and a good learner.</p>
+                        <p class="text-left  fs-5 text-left py-3">Hello There!
+                          There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.
+                          
+                          Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
                         <a href="#contact"><button type="button" class="btn rounded-pill fw-bold p-3" id="btn">CONTACT ME      <i class="fa-solid fa-arrow-right"></i></button></a>
                     </div>
                     <div class="col-sm-4 mt-3 text-end">
-                        <img src="{% static 'images/user-3.jpg' %}" class="w-75 rounded-5 me-5" alt="" height="350" id="img">
+                        <img src="{% static 'images/port1/user-3.jpg' %}" class="w-75 rounded-5 me-5" alt="" height="350" id="img">
                     </div>
                 </div>
             </div>
@@ -108,7 +111,7 @@
                             </div>
                           </div>
                           <div class="col-md-4">
-                            <img src="{% static 'images/html.png' %}" class="img-fluid rounded-circle my-2" alt="...">
+                            <img src="{% static 'images/port1/html.png' %}" class="img-fluid rounded-circle my-2" alt="...">
                           </div>
                         </div>
                       </div>
@@ -121,7 +124,7 @@
                     <div class="card  mt-3 skill mx-3  w-50" style="margin: auto;">
                       <div class="row lg-0">
                         <div class="col-md-4">
-                          <img src="{% static 'images/css.png' %}" class="img-fluid rounded-circle my-2" alt="...">
+                          <img src="{% static 'images/port1/css.png' %}" class="img-fluid rounded-circle my-2" alt="...">
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
@@ -142,7 +145,7 @@
                           </div>
                         </div>
                         <div class="col-md-4">
-                          <img src="{% static 'images/js.png' %}" class="img-fluid rounded-circle my-2" alt="...">
+                          <img src="{% static 'images/port1/js.png' %}" class="img-fluid rounded-circle my-2" alt="...">
                         </div>
                       </div>
                     </div>
@@ -155,7 +158,7 @@
                     <div class="card skill mx-3 mt-3   w-50" style="margin: auto;">
                       <div class="row lg-0">
                         <div class="col-md-4">
-                          <img src="{% static 'images/python.png' %}" class="img-fluid rounded-circle mt-3" alt="...">
+                          <img src="{% static 'images/port1/python.png' %}" class="img-fluid rounded-circle mt-3" alt="...">
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
@@ -176,7 +179,7 @@
                           </div>
                         </div>
                         <div class="col-md-4">
-                          <img src="{% static 'images/mysql.png' %}" class="img-fluid rounded-circle my-2" alt="...">
+                          <img src="{% static 'images/port1/mysql.png' %}" class="img-fluid rounded-circle my-2" alt="...">
                         </div>
                       </div>
                     </div>
@@ -191,25 +194,25 @@
                 <div class="container">
                     <div class="row my-5">
                       <div class="card fr rounded-5 my-2" >
-                        <img src="{% static 'images/bootstrap.png' %}" class="card-img-top my-1" alt="...">
+                        <img src="{% static 'images/port1/bootstrap.png' %}" class="card-img-top my-1" alt="...">
                         <div class="card-body">
                           <p class="card-text fw-bold tx fs-5 text-center">Bootstrap</p>
                         </div>
                       </div>
                       <div class="card fr rounded-5 my-2" >
-                        <img src="{% static 'images/django.png' %}" class="card-img-top my-1" alt="...">
+                        <img src="{% static 'images/port1/django.png' %}" class="card-img-top my-1" alt="...">
                         <div class="card-body">
                           <p class="card-text tx fw-bold fs-5 text-center">Django</p>
                         </div>
                       </div>
                       <div class="card fr rounded-5 my-2" >
-                        <img src="{% static 'images/wamp.png' %}" class="card-img-top my-1" alt="...">
+                        <img src="{% static 'images/port1/wamp.png' %}" class="card-img-top my-1" alt="...">
                         <div class="card-body">
                           <p class="card-text fw-bold tx fs-5 text-center">Wampserver</p>
                         </div>
                       </div>
                       <div class="card fr rounded-5 my-2 ">
-                        <img src="{% static 'images/oracle.png' %}" class="card-img-top my-1" alt="...">
+                        <img src="{% static 'images/port1/oracle.png' %}" class="card-img-top my-1" alt="...">
                         <div class="card-body">
                           <p class="card-text fw-bold tx fs-5 text-center">Oracle</p>
                         </div>
@@ -230,36 +233,30 @@
             <div class="row mt-5">
               <div class="col-sm-3"></div>
               <div class="col-sm-2 border-5 edu">
-                <img src="{% static 'images/uni.png' %}" alt="" class="eduimg mb-3 ms-2 rounded-circle ">
+                <img src="{% static 'images/port1/uni.png' %}" alt="" class="eduimg mb-3 ms-2 rounded-circle ">
               </div>
               <div class="col-sm-7 my-4">
-                <h4>Pursuing Bachlor's in Computer Scirnce & Engineering</h4>
-                <p>Kali Charan Nigam Institude Of Technology , Banda ,U.P. <br>2022-25</p>
+                <h4>Bachelors Degree</h4>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. <br>University Name - 2002 - 2006</p>
               </div>
               <div class="col-sm-3"></div>
               <div class="col-sm-2 border-5 edu">
-                <img src="{% static 'images/diploma.png' %}" alt="" class="eduimg mb-3 ms-2 rounded-circle ">
+                <img src="{% static 'images/port1/diploma.png' %}" alt="" class="eduimg mb-3 ms-2 rounded-circle ">
               </div>
               <div class="col-sm-7 mt-4">
-                <h4>Diploma in Mechanical Engineering (Production)</h4>
-                <p>Government Polytechnic Naraini, Banda, U.P. <br>2019-22</p>
+                <h4>Diploma Course</h4>
+                <p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.<br>College Name - 1999 - 2001</p>
               </div>
               <div class="col-sm-3"></div>
               <div class="col-sm-2 border-5 edu">
-                <img src="{% static 'images/inter.png' %}" alt="" class="eduimg mb-3 ms-2 rounded-circle ">
+                <img src="{% static 'images/port1/inter.png' %}" alt="" class="eduimg mb-3 ms-2 rounded-circle ">
               </div>
               <div class="col-sm-7 mt-4">
-                <h4>Intermediate</h4>
-                <p>Saraswati Balika Vidya Mandir, Kenpath, Banda, U.P. <br>2018-19</p>
+                <h4>Schooling</h4>
+                <p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. <br>School Name - 1999 - 2001</p>
               </div>
               <div class="col-sm-3"></div>
-              <div class="col-sm-2 border-5 edu ">
-                <img src="{% static 'images/high.png' %}" alt="" class="eduimg mb-3 ms-2 rounded-circle ">
-              </div>
-              <div class="col-sm-7 mt-4">
-                <h4>Highschool</h4>
-                <p>Saraswati Balika Vidya Mandir, Kenpath, Banda, U.P. <br>2016-17</p>
-              </div>
+              
             </div>
           </div>
         </div>
@@ -274,16 +271,16 @@
           <div class="container-fluid mt-5">
             <div class="row m-5">
               <div class="col-sm-3">
-                <img src="{% static 'images/inter.png' %}" alt="">
+                <img src="{% static 'images/port1/inter.png' %}" alt="">
               </div>
               <div class="col-sm-3">
-                <img src="{% static 'images/inter.png' %}" alt="">
+                <img src="{% static 'images/port1/inter.png' %}" alt="">
               </div>
               <div class="col-sm-3">
-                <img src="{% static 'images/inter.png' %}" alt="">
+                <img src="{% static 'images/port1/inter.png' %}" alt="">
               </div>
               <div class="col-sm-3">
-                <img src="{% static 'images/inter.png' %}" alt="">
+                <img src="{% static 'images/port1/inter.png' %}" alt="">
               </div>
             </div>
           </div>
@@ -301,7 +298,7 @@
         <div class="container-fluid" id="welcome">
           <div class="row" id="contactimg" >
             <div class="col-sm-6" >
-              <table class="table m-auto mt-5 fw-bold fs-5 w-75" height="350" >
+              <table class="m-auto mt-5 fw-bold fs-5 w-75" height="350" >
                 <tr>
                   <td>Email :</td>
                   <td>ayushi1010gupta@gmail.com</td>
@@ -329,7 +326,15 @@
           </div>           
         </div> 
         <!-- CONTACT END -->
-    </div>
+        <!-- copyright -->
+         <div class="row bgo m-0">
+          <div class="col-sm-12 p-3 text-light">
+            <p class="text-center">© 2025 portfolio template . All Rights Reserved by Design-Exhibition-Space.</p>
+          </div>
+
+         </div>
+        <!-- copyright -->
+      </div>
     <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
 </body>
 </html>
