--- a/designesapp/static/css/portfolio2.css
+++ b/designesapp/static/css/portfolio2.css
@@ -15,7 +15,7 @@
 }
 #header{
     min-height:100%;
-    background-image: url(image/one.jpg);
+    background-image: url(../images/port2/one.jpg);
     background-size:cover;
     background-attachment: fixed;
     position:relative;
@@ -80,7 +80,7 @@
 #skills{
     min-height:750px;
     background-size:cover;
-    background-image: url(image/four.jpeg);
+    background-image: url(../images/port2/four.jpeg);
     background-attachment: fixed;
     animation: all 1s ease;
 }
@@ -205,7 +205,7 @@
 }
 #education{
     height: 100%;
-    background-image: url(image/seven.jpg);
+    background-image: url(../images/port2/seven.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -307,7 +307,7 @@
 }
 #contact{
     height:120%;
-    background-image: url(image/five.jpeg);
+    background-image: url(../images/port2/five.jpeg);
     background-size:cover ;
     background-attachment: fixed;
     position: relative;
