--- a/designesapp/templates/portfolio2.html
+++ b/designesapp/templates/portfolio2.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/portfolio2.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <title>Ayushi Gupta</title>
+    <title>portfolio2</title>
 </head>
 <body>
     <div class="container-fluid p-0">
@@ -109,7 +110,7 @@
             <h1 class="text-white text-center heading"><span style="color: greenyellow;text-decoration: underline;">02</span> Projects</h1>
             <div class="col-sm-10 m-auto mb-3">
               <div class="card" data-aos="flip-up" data-aos-duration="3000">
-                <img src="image/p1.jpg" class="card-img-top slide1" alt="..." height="200px">
+                <img src="{% static 'images/port2/p1.jpg' %}" class="card-img-top slide1" alt="..." height="200px">
                 <div class="slide2">
                   <div class="card-body p-2">
                     <h5>Online Addmission System</h5>
@@ -118,7 +119,7 @@
                 </div>
               </div>
               <div class="card" data-aos="flip-up" data-aos-duration="3000">
-                <img src="image/p2.jpg" class="card-img-top slide1" alt="..." height="200px">
+                <img src="{% static 'images/port2/p2.jpg' %}" class="card-img-top slide1" alt="..." height="200px">
                 <div class="slide2">
                   <div class="card-body p-2">
                     <h5>Grocery Shop</h5>
@@ -128,7 +129,7 @@
                 </div>
               </div>
               <div class="card" data-aos="flip-up" data-aos-duration="3000">
-                <img src="image/p3.jpg" class="card-img-top slide1" alt="..." height="200px">
+                <img src="{% static 'images/port2/p3.jpg' %}" class="card-img-top slide1" alt="..." height="200px">
                 <div class="slide2">
                   <div class="card-body p-2">
                     <h5>Portfolio</h5>
@@ -138,7 +139,7 @@
                 </div>
               </div>
               <div class="card" data-aos="flip-up" data-aos-duration="3000">
-                <img src="image/p4.PNG" class="card-img-top slide1" alt="..." height="200px">
+                <img src="{% static 'images/port2/p4.PNG' %}" class="card-img-top slide1" alt="..." height="200px">
                 <div class="slide2">
                   <div class="card-body p-2">
                     <h5>Music Player</h5>
@@ -262,7 +263,7 @@
           <!-- Footer start -->
            <div class="row" id="footer">
             <div class="col-sm-12 text-white m-auto text-center">
-              <span>© 2025 by Ayushi Gupta.</span>
+              <span>© 2025 portfolio template. all right reserved by Design-Exhibition-Space.</span>
             </div>
            </div>
           <!-- Footer end -->
